added udig 1.1.x branch