@@ -19,113 +19,104 @@ package net.refractions.udig.catalog.internal.oracle;
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 
 import net.refractions.udig.catalog.CatalogPlugin;
-import net.refractions.udig.catalog.ID;
 import net.refractions.udig.catalog.IGeoResource;
 import net.refractions.udig.catalog.IGeoResourceInfo;
 import net.refractions.udig.catalog.IService;
 import net.refractions.udig.catalog.oracle.internal.Messages;
-import net.refractions.udig.core.jts.ReferencedEnvelopeCache;
 import net.refractions.udig.ui.graphics.Glyph;
 
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
+import org.geotools.data.FeatureReader;
 import org.geotools.data.FeatureSource;
 import org.geotools.data.FeatureStore;
+import org.geotools.feature.Feature;
 import org.geotools.feature.FeatureIterator;
+import org.geotools.feature.FeatureType;
+import org.geotools.feature.GeometryAttributeType;
 import org.geotools.geometry.jts.ReferencedEnvelope;
-import org.geotools.jdbc.JDBCDataStore;
-import org.opengis.feature.simple.SimpleFeature;
-import org.opengis.feature.simple.SimpleFeatureType;
 import org.opengis.referencing.crs.CoordinateReferenceSystem;
 
 import com.vividsolutions.jts.geom.Envelope;
 
 /**
- * OracleGeoResource representing a table or view.
- * 
+ * Provides ...TODO summary sentence
+ * <p>
+ * TODO Description
+ * </p>
  * @author David Zwiers, Refractions Research
  * @since 0.6
  */
 public class OracleGeoResource extends IGeoResource {
+    OracleServiceImpl parent;
     String typename = null;
-    private ID id;
 
+    private OracleGeoResource() {/*not for use*/
+    }
     /**
      * Construct <code>OracleGeoResource</code>.
-     * 
+     *
      * @param parent
      * @param typename
      */
     public OracleGeoResource( OracleServiceImpl parent, String typename ) {
-        this.service = parent;
+        this.parent = parent;
         this.typename = typename;
-        this.id = new ID(service.getID(), typename );
     }
 
-    OracleServiceImpl getService() {
-        return (OracleServiceImpl) service;
-    }
-    
-    @Override
-    public ID getID() {
-        return id;
-    }
-
-    @Override
     public URL getIdentifier() {
-        return id.toURL();
+        try {
+            return new URL(parent.getIdentifier().toString() + "#" + typename); //$NON-NLS-1$
+        } catch (MalformedURLException e) {
+            return parent.getIdentifier();
+        }
     }
 
-    
     /*
      * @see net.refractions.udig.catalog.IGeoResource#getStatus()
      */
     public Status getStatus() {
-        return service.getStatus();
+        return parent.getStatus();
     }
 
     /*
      * @see net.refractions.udig.catalog.IGeoResource#getStatusMessage()
      */
     public Throwable getMessage() {
-        return service.getMessage();
+        return parent.getMessage();
     }
 
     /*
-     * Required adaptions: <ul> <li>IGeoResourceInfo.class <li>IService.class </ul>
-     * @see net.refractions.udig.catalog.IResolve#resolve(java.lang.Class,
-     * org.eclipse.core.runtime.IProgressMonitor)
+     * Required adaptions:
+     * <ul>
+     * <li>IGeoResourceInfo.class
+     * <li>IService.class
+     * </ul>
+     * @see net.refractions.udig.catalog.IResolve#resolve(java.lang.Class, org.eclipse.core.runtime.IProgressMonitor)
      */
     public <T> T resolve( Class<T> adaptee, IProgressMonitor monitor ) throws IOException {
-        if (adaptee == null){
+        if (adaptee == null)
             return null;
-        }
-        if (adaptee.isAssignableFrom(IGeoResourceInfo.class)){
-            return adaptee.cast(createInfo(monitor));
-        }
-        if (adaptee.isAssignableFrom(IGeoResource.class)){
+//        if (adaptee.isAssignableFrom(IService.class))
+//            return adaptee.cast(parent);
+        if (adaptee.isAssignableFrom(IGeoResourceInfo.class))
+            return adaptee.cast(getInfo(monitor));
+        if (adaptee.isAssignableFrom(IGeoResource.class))
             return adaptee.cast(this);
-        }
         if (adaptee.isAssignableFrom(FeatureStore.class)) {
-            JDBCDataStore dataStore = getService().getDS(monitor);
-
-            FeatureSource<SimpleFeatureType, SimpleFeature> fs = dataStore
-                    .getFeatureSource(typename);
-
-            if (fs instanceof FeatureStore< ? , ? >){
+            FeatureSource fs = parent.getDS(monitor).getFeatureSource(typename);
+            if (fs instanceof FeatureStore)
                 return adaptee.cast(fs);
-            }
-            if (adaptee.isAssignableFrom(FeatureSource.class)) {
-                dataStore = getService().getDS(monitor);
-
-                return adaptee.cast(dataStore.getFeatureSource(typename));
-            }
+            if (adaptee.isAssignableFrom(FeatureSource.class))
+                return adaptee.cast(parent.getDS(monitor).getFeatureSource(typename));
         }
         return super.resolve(adaptee, monitor);
+    }
+    public IService service( IProgressMonitor monitor ) throws IOException {
+        return parent;
     }
     /*
      * @see net.refractions.udig.catalog.IResolve#canResolve(java.lang.Class)
@@ -139,67 +130,58 @@ public class OracleGeoResource extends IGeoResource {
                 .isAssignableFrom(IService.class))
                 || super.canResolve(adaptee);
     }
-
-    @Override
-    public OracleResourceInfo getInfo( IProgressMonitor monitor ) throws IOException {
-        return (OracleResourceInfo) super.getInfo(monitor);
-    }
-    protected OracleResourceInfo createInfo( IProgressMonitor monitor ) throws IOException {
-        if (getStatus() == Status.BROKEN) {
-            return null; // could not connect
-        }
-        getService().rLock.lock();
-        try {
-            return new OracleResourceInfo();
-        } finally {
-            getService().rLock.unlock();
-        }
-    }
-
-    class OracleResourceInfo extends IGeoResourceInfo {
-
-        private SimpleFeatureType ft = null;
-        OracleResourceInfo() throws IOException {
-            JDBCDataStore dataStore = getService().getDS(null);
-            ft = dataStore.getSchema(typename); // this may be broken in geotools?
-            this.title = typename;
+    private volatile IGeoResourceInfo info;
+    public IGeoResourceInfo getInfo( IProgressMonitor monitor ) throws IOException {
+        if (info == null && getStatus() != Status.BROKEN) {
+            parent.rLock.lock();
             try {
-                FeatureSource<SimpleFeatureType, SimpleFeature> source = dataStore
-                        .getFeatureSource(typename);
-                ft = source.getSchema();
+                if (info == null) {
+                    info = new IGeoResourceShpInfo();
+                }
+            } finally {
+                parent.rLock.unlock();
+            }
+        }
+        return info;
+    }
+
+    class IGeoResourceShpInfo extends IGeoResourceInfo {
+
+        private FeatureType ft = null;
+        IGeoResourceShpInfo() throws IOException {
+            ft = parent.getDS(null).getSchema(typename);
+
+            try {
+                FeatureSource source = parent.getDS(null).getFeatureSource(typename);
                 bounds = (ReferencedEnvelope) source.getBounds();
                 if (bounds == null) {
                     CoordinateReferenceSystem crs = null;
-                    // GeometryDescriptor defaultGeometry =
-                    // source.getSchema().getGeometryDescriptor();
-                    crs = source.getSchema().getCoordinateReferenceSystem();
-                    this.bounds = ReferencedEnvelopeCache.getReferencedEnvelope(info.getCRS());
-                    
-                    /*
-                    // no full table scan for you!
+                    GeometryAttributeType defaultGeometry = source.getSchema().getDefaultGeometry();
+                    if (defaultGeometry != null) {
+                        crs = defaultGeometry.getCoordinateSystem();
+                    }
                     bounds = new ReferencedEnvelope(new Envelope(), crs);
-                    FeatureIterator<SimpleFeature> iter = source.getFeatures().features();
-                    try {
-                        while( iter.hasNext() ) {
-                            SimpleFeature element = iter.next();
-                            if (bounds.isNull())
+                    FeatureIterator iter=source.getFeatures().features();
+                    try{
+                        while(iter.hasNext() ) {
+                            Feature element = iter.next();
+                            if( bounds.isNull() )
                                 bounds.init(element.getBounds());
                             else
-                                bounds.include(element.getBounds());
+                                bounds.expandToInclude(element.getBounds());
                         }
-                    } finally {
+                    }finally{
                         iter.close();
                     }
-                    */
                 }
-                // CoordinateReferenceSystem geomcrs = source.getSchema().getCRS();
+                //                        CoordinateReferenceSystem geomcrs = source.getSchema().getDefaultGeometry().getCoordinateSystem();
 
-                // if(geomcrs!=null && !geomcrs.equals(CRS.decode("EPSG:4269"))){
-                // bounds = JTS.transform(bounds,CRS.transform(geomcrs,CRS.decode("EPSG:4269")));
-                // }else{
-                // if(geomcrs == null)
-                // System.err.println("CRS unknown for Shp");
-                // }
+                //                        if(geomcrs!=null && !geomcrs.equals(CRS.decode("EPSG:4269"))){
+                //                            bounds = JTS.transform(bounds,CRS.transform(geomcrs,CRS.decode("EPSG:4269")));
+                //                        }else{
+                //                            if(geomcrs == null)
+                //                                System.err.println("CRS unknown for Shp");
+                //                        }
             } catch (Exception e) {
                 CatalogPlugin
                         .getDefault()
@@ -211,29 +193,28 @@ public class OracleGeoResource extends IGeoResource {
                 bounds = new ReferencedEnvelope(new Envelope(), null);
             }
 
-            icon = Glyph.icon(ft);
+            icon=Glyph.icon(ft);
             keywords = new String[]{"postgis", //$NON-NLS-1$
-                    ft.getName().getLocalPart(), ft.getName().getNamespaceURI()};
+                    ft.getTypeName(), ft.getNamespace().toString()};
         }
 
         public CoordinateReferenceSystem getCRS() {
-            return ft.getCoordinateReferenceSystem();
+            GeometryAttributeType defGeom = ft.getDefaultGeometry();
+            if (defGeom == null)
+                return null;
+            return defGeom.getCoordinateSystem();
         }
 
         public String getName() {
-            return ft.getName().getLocalPart();
+            return ft.getTypeName();
         }
 
         public URI getSchema() {
-            try {
-                return new URI(ft.getName().getNamespaceURI());
-            } catch (URISyntaxException e) {
-                return null;
-            }
+            return ft.getNamespace();
         }
 
         public String getTitle() {
-            return ft.getName().getLocalPart();
+            return ft.getTypeName();
         }
     }
 }
